# experimental

./: LICENSE  Makefile  README.md
epoll/: main.c
example-c-project/: conanfile.py
example-c-project/src/: json.c  json.h  main.c  meson.build
example-c-project/src/tests/: json.c
libuv/: meson.build  util.h
libuv-tcp-server/: config.h.in  main.c  meson.build
libuv/tests/: main.h
libuv1/: config.h.in  connection.c  connection.h  main.c
libuv1/tests/: test_connection_buffer.c
libuv2/: main.c  meson.build
linker-test/: README.md  a.c  a.sym  a_wrapper.c  b.c  b.sym  b_wrapper.c  main.c  meson.build
memcpy-test/: main.c  meson.build  metrics.awk
memory/: README.md  chunked_pool_slist.c  chunked_pool_slist_step_10.c  chunked_pool_slist_step_100.c  chunked_pool_slist_step_1000.c  chunked_pool_slist_step_5.c  main.c  malloc_slist_nseq.c  malloc_slist_seq.c  meson.build  metrics.awk  pool.h  pool_slist.c  slist.h  test.h
sandbox/: main.c  meson.build
tell-me-more-rust/: Cargo.toml
tell-me-more-rust/src/: main.rs
viewstamped-replication/: .editorconfig  .gitignore  Makefile  main.c  util.h
